[gd_scene load_steps=5 format=3 uid="uid://dw1vdcgud5v8d"]

[ext_resource type="Script" path="res://entity/spells/beam.gd" id="1_uj1ki"]
[ext_resource type="PackedScene" uid="uid://dmfrqt2kt6q6u" path="res://entity/entity.tscn" id="1_wb42q"]
[ext_resource type="Texture2D" uid="uid://c6drur36o4wjf" path="res://icon_repeat.svg" id="3_5oalm"]
[ext_resource type="PackedScene" uid="uid://lk25ykwcgvns" path="res://entity/actor/overlaps/hitbox.tscn" id="4_2gghf"]

[node name="Beam" instance=ExtResource("1_wb42q")]
script = ExtResource("1_uj1ki")
initial_speed = 0.0
initial_direction = Vector2(0, 0)
initial_arc = 0.0
curr_push = 0.0
curr_angle = 0.0
timeout = 0.0
distance = 0.0

[node name="Sprite2d" parent="." index="0"]
visible = false

[node name="Line2D" type="Line2D" parent="." index="2"]
texture_repeat = 2
texture = ExtResource("3_5oalm")
texture_mode = 1

[node name="Hitbox" parent="." index="3" instance=ExtResource("4_2gghf")]

[node name="RayCast2D" type="RayCast2D" parent="." index="4"]
collision_mask = 32
collide_with_areas = true
collide_with_bodies = false

[node name="BeamTimeoutTimer" type="Timer" parent="." index="5"]

[connection signal="area_entered" from="Hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="timeout" from="BeamTimeoutTimer" to="." method="_on_projectile_timeout_timer_timeout"]
